viz-lite.js is not included in the npm package.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "emscripten"
   ],
   "files": [
-    "viz.js",
-    "viz-lite.js"
+    "viz.js"
   ],
   "author": "Mike Daines <mdaines@fastmail.com>",
   "license": "MIT",
