Add "browser" property to package.json.
This indicates that the "fs", "path", and "crypto" packages should be empty objects in a browser context, since they aren't actually required in that case even though require statements are present. This prevents webpack, etc. from trying to include them. Addresses #83.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   "files": [
     "viz.js"
   ],
+  "browser": {
+    "fs": false,
+    "path": false,
+    "crypto": false
+  },
   "author": "Mike Daines <mdaines@fastmail.com>",
   "license": "MIT",
   "bugs": {
