Add typescript support
* some type definitions for the existing api
* reference that file in `package.json` so it will get deployed to
  `npm`
* followed guidelines from
  https://www.typescriptlang.org/docs/handbook/declaration-files/do-s-and-don-ts.html

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   ],
   "files": [
     "viz.js",
-    "viz-lite.js"
+    "viz-lite.js",
+    "index.d.ts"
   ],
   "browser": {
     "fs": false,
