--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "viz-js-site",
   "dependencies": {
     "viz.js": ">=1.0.0",
-    "fabric.js": "fabric#^1.6.7"
+    "fabric.js": "fabric#^1.6.7",
+    "Split.js": "^1.3.5",
+    "svg-pan-zoom": "^3.5.1"
   },
   "private": true
 }
