--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 
 script:
   - docker exec -it emscripten make expat graphviz viz.js
-  - node test-browser/runner --file full.html --file fabric.html --capabilities test-browser/all.json
+  - node test-browser/runner --file full.html --browser chrome
 
 addons:
   sauce_connect: true
