--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ before_script:
 
 script:
   - docker exec -it emscripten make expat graphviz viz.js
-  - node test-browser/runner --file full.html --capabilities test-browser/all.json
+  - node test-browser/runner --file full.html --browser chrome --browser safari --browser firefox
+  - node test-browser/runner --file fabric.html --browser chrome --browser safari --browser firefox --browser "internet explorer"
 
 addons:
   sauce_connect: true
