Make lite and full version, add test for lite.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ before_script:
   - python -m SimpleHTTPServer &
 
 script:
-  - docker exec -it emscripten make expat graphviz viz.js
+  - docker exec -it emscripten make
   - node test-browser/runner --file full.html --browser chrome --browser safari --browser firefox
+  - node test-browser/runner --file lite.html --browser chrome --browser safari --browser firefox
   - node test-browser/runner --file fabric.html --browser chrome --browser safari --browser firefox --browser "internet explorer"
 
 addons:
