Add Microsoft Edge to fabric tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - docker exec -it emscripten make
   - node test-browser/runner --file full.html --browser chrome --browser safari --browser firefox
   - node test-browser/runner --file lite.html --browser chrome --browser safari --browser firefox
-  - node test-browser/runner --file fabric.html --browser chrome --browser safari --browser firefox --browser "internet explorer"
+  - node test-browser/runner --file fabric.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
 
 addons:
   sauce_connect: true
