--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
   "bugs": {
     "url": "https://github.com/mdaines/viz.js/issues"
   },
-  "homepage": "https://github.com/mdaines/viz.js"
+  "homepage": "https://github.com/mdaines/viz.js",
+  "devDependencies": {
+    "minimist": "^1.2.0",
+    "selenium-webdriver": "^2.45.1"
+  }
 }
