--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
   - docker
 
 before_install:
-  - docker run -dit --name emscripten -v $(pwd):/src trzeci/emscripten:latest bash
+  - docker run -dit --name emscripten -v $(pwd):/src trzeci/emscripten:sdk-tag-1.37.33-64bit bash
 
 before_script:
   - python -m SimpleHTTPServer &
