--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ node_js:
 services:
   - docker
 
+addons:
+  sauce_connect: true
+
 before_install:
   - docker run -dit --name emscripten -v $(pwd):/src trzeci/emscripten:sdk-tag-1.37.33-64bit bash
 
@@ -18,5 +21,12 @@ script:
   - node test-browser/runner --file lite.html --browser chrome --browser safari --browser firefox
   - node test-browser/runner --file fabric.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
 
-addons:
-  sauce_connect: true
+before_deploy:
+  - rvm $(travis_internal_ruby) do ruby -S gem install octokit git
+
+deploy:
+  provider: script
+  script: rvm $(travis_internal_ruby) do ruby -rubygems deploy.rb
+  skip_cleanup: true
+  on:
+    tags: true
