Write NPM token to ~/.npmrc

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
 
 before_deploy:
   - rvm $(travis_internal_ruby) do ruby -S gem install octokit git
+  - printf "//registry.npmjs.org/:_authToken=%s\n" "$NPM_TOKEN" >> ~/.npmrc
 
 deploy:
   provider: script
