Print out the sizes of viz.js and viz-lite.js at the end of the build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
   - node test-browser/runner --file full-fabric.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
   - node test-browser/runner --file lite-fabric.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
   - node_modules/.bin/tsc --project test-types
+  - ls -l viz.js viz-lite.js
 
 before_deploy:
   - rvm $(travis_internal_ruby) do ruby -S gem install octokit git
