--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
   },
   "homepage": "https://github.com/mdaines/viz.js",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "minimist": "^1.2.0",
     "selenium-webdriver": "^2.45.1",
     "typescript": "^2.7.2"
