--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   ],
   "files": [
     "index.js",
-    "viz.module.js",
-    "viz-lite.module.js",
+    "viz.module",
+    "viz-lite.module",
     "index.d.ts"
   ],
   "browser": {
@@ -29,15 +29,14 @@
   },
   "homepage": "https://github.com/mdaines/viz.js",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "minimist": "^1.2.0",
     "selenium-webdriver": "^2.45.1",
-    "typescript": "^2.7.2",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "typescript": "^2.7.2"
   }
 }
