Update fabric and TypeScript tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,9 @@ script:
   - docker exec -it emscripten make
   - node test-browser/runner --file full.html --browser chrome --browser safari --browser firefox
   - node test-browser/runner --file lite.html --browser chrome --browser safari --browser firefox
-  # - node test-browser/runner --file full-fabric.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
-  # - node test-browser/runner --file lite-fabric.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
-  # - node_modules/.bin/tsc --project test-types
+  - node test-browser/runner --file full-fabric.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
+  - node test-browser/runner --file lite-fabric.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
+  - node_modules/.bin/tsc --project test-types
 
 before_deploy:
   - rvm $(travis_internal_ruby) do ruby -S gem install octokit git
