--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/mdaines/viz.js",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-add-header-comment": "^1.0.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
