--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,7 @@ before_script:
 
 script:
   - docker exec -it emscripten make deps all
-  - node test-browser/runner --file full.html --browser chrome --browser safari --browser firefox
-  - node test-browser/runner --file lite.html --browser chrome --browser safari --browser firefox
-  - node test-browser/runner --file worker.html --browser chrome --browser safari --browser firefox
-  - node test-browser/runner --file full-polyfill.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
-  - node test-browser/runner --file lite-polyfill.html --browser chrome --browser safari --browser firefox --browser MicrosoftEdge --browser "internet explorer"
+  - node test-browser/runner --matrix test-browser/all.json
   - node_modules/.bin/tsc --project test-types
 
 before_deploy:
