--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "bluebird": "^3.5.1",
     "minimist": "^1.2.0",
     "selenium-webdriver": "^2.45.1",
     "typescript": "^2.7.2"
