Add basic test for use in node.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
   - docker exec -it emscripten make deps all
   - node test-browser/runner --matrix test-browser/all.json
   - node_modules/.bin/tsc --project test-types
+  - node_modules/.bin/mocha test-node
 
 before_deploy:
   - rvm $(travis_internal_ruby) do ruby -S gem install octokit git
