Exercise import in TypeScript declaration test and fix declarations.
Addresses #127.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "viz.js",
     "full.js.opaque",
     "lite.js.opaque",
-    "index.d.ts"
+    "index.d.ts",
+    "full.js.opaque.d.ts",
+    "lite.js.opaque.d.ts"
   ],
   "browser": {
     "fs": false,
