Remove TypeScript declarations and tests.

--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
   "files": [
     "viz.js",
     "full.js.opaque",
-    "lite.js.opaque",
-    "index.d.ts",
-    "full.js.opaque.d.ts",
-    "lite.js.opaque.d.ts"
+    "lite.js.opaque"
   ],
   "browser": {
     "fs": false,
@@ -40,7 +37,6 @@
     "bluebird": "^3.5.1",
     "minimist": "^1.2.0",
     "mocha": "^5.1.1",
-    "selenium-webdriver": "^2.45.1",
-    "typescript": "^2.7.2"
+    "selenium-webdriver": "^2.45.1"
   }
 }
