Add support for "npm test"

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 script:
   - docker exec -it emscripten make deps all
   - node test-browser/runner --matrix test-browser/all.json
-  - node_modules/.bin/mocha test-node
+  - npm test
 
 before_deploy:
   - rvm $(travis_internal_ruby) do ruby -S gem install octokit git
