--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "viz.js",
-  "version": "2.1.1",
+  "version": "2.1.2-pre.1",
   "description": "A hack to put Graphviz on the web.",
   "main": "viz.js",
   "module": "viz.es.js",
