--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-build-full/
-build-lite/
-prefix-full/
-prefix-lite/
-build-main/
-sources/
+lib/
 node_modules/
-
-viz.js
-viz.es.js
-full.render.js
-lite.render.js
