--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "license": "MIT",
-  "browserslist": ["defaults"],
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-terser": "^0.4.1",
+    "jsdom": "^21.1.1",
+    "mocha": "^10.2.0",
     "rollup": "^3.20.7"
+  },
+  "scripts": {
+    "test": "mocha --recursive --extension \".test.mjs\""
   }
 }
