--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: docker/build-push-action@v4
         with:
-          context: src
+          context: src/module
           push: false
           outputs: type=local,dest=lib
           cache-from: type=gha
