--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "@viz-js/viz",
+  "version": "3.0.0-pre.1",
   "license": "MIT",
+  "main": "lib/viz.js",
+  "files": [
+    "lib/encoded.mjs",
+    "lib/module.mjs",
+    "lib/module.wasm",
+    "lib/viz.js",
+    "src/standalone.mjs",
+    "src/viz.mjs"
+  ],
   "browserslist": [
     "defaults"
   ],
