Change Parcel example to use the package
The example still requires a build as noted in the README since it just refers to the package defined at root of the repository.

--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "@viz-js/viz": "file:../..",
     "parcel": "^2.9.2"
   },
   "source": "index.html",
