--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "@viz-js/viz",
+  "description": "WebAssembly build of Graphviz with a simple wrapper for using it on the web",
+  "keywords": [
+    "graphviz",
+    "emscripten"
+  ],
   "version": "3.0.0-pre.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mdaines/viz-js.git"
+  },
   "license": "MIT",
   "main": "lib/viz-standalone.js",
   "files": [
