Add GH_TOKEN to env

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,8 @@ jobs:
 
       - run: |
           gh release create --prerelease ${{ github.ref }} lib/*
+        env:
+          GH_TOKEN: ${{ github.token }}
 
   publish:
     needs: [build, release]
