--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
           path: lib
 
       - run: |
-          gh release create --prerelease ${{ github.ref }} lib/*
+          gh release create ${{ contains(github.ref, ".pre-") && "--prerelease" || "" }} ${{ github.ref }} lib/*
         env:
           GH_TOKEN: ${{ github.token }}
 
