--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,8 +21,7 @@ jobs:
           name: lib
           path: lib
 
-      - run: |
-          gh release create ${{ contains(github.ref, '.pre-') && '--prerelease' || '' }} ${{ github.ref }} lib/*
+      - run: gh release create ${{ github.ref }} lib/*
         env:
           GH_TOKEN: ${{ github.token }}
 
