--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
           name: lib
           path: lib
 
-      - run: gh release create ${{ github.ref }} lib/*
+      - run: gh release create "${{ github.ref }}" lib/* --draft --title "${{ github.ref }}"
         env:
           GH_TOKEN: ${{ github.token }}
 
