--- a/examples/parcel/package.json
+++ b/examples/parcel/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "dependencies": {
-    "@viz-js/viz": "file:../..",
+    "@viz-js/viz": "link:../..",
     "parcel": "^2.9.2"
   },
   "source": "index.html",
