--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -31,7 +31,8 @@ jobs:
         with:
           node-version: "18.x"
 
-      - run: |
+      - name: "Build"
+        run: |
           yarn install --frozen-lockfile
           test -f lib/module.mjs && touch lib/module.mjs
           test -f lib/module.wasm && touch lib/module.wasm
@@ -58,9 +59,10 @@ jobs:
         with:
           node-version: "18.x"
 
-      - run: yarn install --frozen-lockfile
-
-      - run: yarn test
+      - name: "Run tests"
+        run: |
+          yarn install --frozen-lockfile
+          yarn test
 
   test-consume:
     name: Test import and require
@@ -78,12 +80,14 @@ jobs:
         with:
           node-version: "18.x"
 
-      - run: |
+      - name: "Run module-import test"
+        run: |
           yarn install --frozen-lockfile
           node index.js
         working-directory: test/module-import
 
-      - run: |
+      - name: "Run commonjs-require test"
+        run: |
           yarn install --frozen-lockfile
           node index.js
         working-directory: test/commonjs-require
@@ -98,7 +102,8 @@ jobs:
         with:
           node-version: "18.x"
 
-      - run: |
+      - name: "Run typecheck test"
+        run: |
           yarn install --frozen-lockfile
           yarn typecheck
         working-directory: test/types
